--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-550-diagoona
                             <h1 class="mb-5 tm-content-title"style="text-align:right; font-size: 150%; font-weight: bold;">متجر الكريبتو</h1>
                         <p class="mb-5" style="text-align:right; font-size: 130%;">متجر الكريبتو هو دليلكم للاستثمار في العملات المشفرة. يقوم فريق من المختصين بدراسة السوق وصياغة خطة للاستثمار تتماشى مع رغبات الحريف لضمان اعلى نسبة من الأرباح كما يتم مصاحبتكم خلال جميع مراحل الاستثمار لتقديم المساعدة والاستشارة. على عكس بقية الوسطاء الماليين وسماسرة البورصة فان كل رأس المال يبقى بحوزة وتحت قيد المستثمر وذلك لضمان اعلى قدر من الشفافية والأمان.
 أسس متجر الكريبتو في 2019 تونس من قبل فريق ديناميكي مختص في التحاليل المالية وسوق العملات المشفرة لمساعدة المستثمرين العرب في مجال الكريبتو ونشر ثقافة الاستثمار في وطننا العربي
-</br> شعارنا: نزاهة، ثقة، نجاح، وازدهار <p style="text-align:center;">  <a href="about.html" class="btn btn-primary" >كيف استثمر </a></p></p>
+</br> شعارنا: نزاهة، ثقة، نجاح، وازدهار <p style="text-align:center;">  <a href="how-to-invest.html" class="btn btn-primary" >كيف استثمر </a></p></p>
 
                     </section>
                 </main>
